bug fixes, added cheese, edited food values

--- a/src/main/resources/assets/world_of_food/lang/en_us.json
+++ b/src/main/resources/assets/world_of_food/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.world_of_food.caramel": "Caramel",
   "item.world_of_food.caramel_apple": "Caramel Apple",
   "item.world_of_food.cereal": "Cereal",
+  "item.world_of_food.cheese": "Cheese",
   "item.world_of_food.chocolate": "Chocolate",
   "item.world_of_food.chocolate_pie": "Chocolate Pie",
   "item.world_of_food.cooked_egg": "Cooked Egg",
