--- a/src/main/resources/assets/world_of_food/lang/en_us.json
+++ b/src/main/resources/assets/world_of_food/lang/en_us.json
@@ -5,19 +5,26 @@
   "item.world_of_food.buttered_toast": "Buttered Toast",
   "item.world_of_food.caramel": "Caramel",
   "item.world_of_food.caramel_apple": "Caramel Apple",
+  "item.world_of_food.caramel_bucket": "Caramel Bucket",
   "item.world_of_food.cereal": "Cereal",
   "item.world_of_food.cheese": "Cheese",
+  "item.world_of_food.cheese_puffs": "Cheese Puffs",
   "item.world_of_food.chocolate": "Chocolate",
   "item.world_of_food.chocolate_pie": "Chocolate Pie",
   "item.world_of_food.cooked_egg": "Cooked Egg",
+  "item.world_of_food.custard": "Custard",
   "item.world_of_food.gelatin": "Gelatin",
   "item.world_of_food.gelatin_dessert": "Gelatin Dessert",
-  "item.world_of_food.hot_cocoa": "Hot Cocoa",
+  "item.world_of_food.glow_berry_pie": "Glow Berry Pie",
+  "item.world_of_food.mashed_potatoes": "Mashed Potatoes",
+  "item.world_of_food.nachos": "Nachos",
+  "item.world_of_food.ramen": "Ramen",
+  "item.world_of_food.sandwich": "Sandwich",
+  "item.world_of_food.shepherds_pie": "Shepherd's Pie",
   "item.world_of_food.sushi": "Sushi",
   "item.world_of_food.sweet_berry_pie": "Sweet Berry Pie",
-  "item.world_of_food.sweet_cream": "Sweet Cream",
+  "item.world_of_food.sweet_cream_bucket": "Sweet Cream Bucket",
   "item.world_of_food.toast": "Toast",
   "item.world_of_food.tortilla": "Tortilla",
-  "item.world_of_food.tortilla_chips": "Tortilla Chips",
-  "itemGroup.worldOfFoodTab": "World of Food"
+  "item.world_of_food.tortilla_chips": "Tortilla Chips"
 }
